--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -3,8 +3,8 @@ FROM ubuntu:16.04
 EXPOSE 8101 8181 8080 6633 6640 6653
 RUN set -eux; \
     apt-get update; \
-    apt-get install openjdk-8-jre-headless -y;\
     apt-get install --no-install-recommends -y\
+    openjdk-8-jre-headless\
     wget\
     ;\
     wget https://nexus.opendaylight.org/content/groups/public/org/opendaylight/integration/distribution-karaf/0.5.0-Boron/distribution-karaf-0.5.0-Boron.tar.gz;\
